[tool.poetry]
name = "mscvt"
version = "0.1.0"
description = "mscvt using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
mscvt = "mscvt.main:run"
run_crew = "mscvt.main:run"
train = "mscvt.main:train"
replay = "mscvt.main:replay"
test = "mscvt.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
