<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mscvt_ros</name>
  <version>0.0.0</version>
  <description>A multiagent system for Campus Visitor Tour</description>
  <maintainer email="shrivastavayash26@gmail.com">Yash Shrivastava</maintainer>
  <license>UNKNOWN</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>mscvt_messages</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
